--- a/statistical_methods_and_pandas_lab.ipynb
+++ b/statistical_methods_and_pandas_lab.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4      US  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "max    2.000431e+06      5.000000         5.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "4.7"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "Name: play_star_rating, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "91.9804293059243"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,23 +622,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "273982.0"
+       "319071.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total number of pieces across all unique Lego sets\n",
-    "unique_lego_sets = df.drop_duplicates(subset=['piece_count']) #Determine unique lego sets\n",
+    "unique_lego_sets = df.drop_duplicates(subset=['prod_id']) #Determine unique lego sets based on \"product_id\"\n",
     "\n",
     "total_number_of_pieces = unique_lego_sets['piece_count'].sum() #Add up all the pieces in the colunm \"piece_count\"\n",
     "\n",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "Name: 0.9, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "Name: review_difficulty, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
